Changes for Activiti 6 release build